// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros transform jsx string: transform jsx string 1`] = `

import ct from '../../class-types.macro';
    
<div className={ct("class", "other-class")} />;

      ↓ ↓ ↓ ↓ ↓ ↓

/*#__PURE__*/
React.createElement("div", {
  className: "class other-class",
});


`;

exports[`macros transform jsx with variables: transform jsx with variables 1`] = `

import ct from '../../class-types.macro';

const style = ct("class", "other-class");
    
<div className={ct("string", style)} />;

      ↓ ↓ ↓ ↓ ↓ ↓

const style = "class other-class";

/*#__PURE__*/
React.createElement("div", {
  className: "string" + (" " + style),
});


`;
